tests/baselines/reference/definiteAssignmentWithErrorStillStripped.errors.txt
tests/cases/compiler/definiteAssignmentWithErrorStillStripped.ts(2,6): error TS1264: Declarations with definite assignment assertions must also have type annotations.


==== tests/cases/compiler/definiteAssignmentWithErrorStillStripped.ts (1 errors) ====
    class C {
        p!;
         ~
!!! error TS1264: Declarations with definite assignment assertions must also have type annotations.
    }